<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartographer_launch</name>
  <version>1.0.0</version>
  <description>Cartographer Mapping with RPLidar A1M8</description>
  <maintainer email="a1fu@ucsd.edu">Quinton</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>